--- a/hireflow/.env.example
+++ b/hireflow/.env.example
@@ -11,4 +11,4 @@ AUTH_SECRET="workshop-secret-key"
 AI_PROVIDER="gemini"
 GEMINI_API_KEY=""
 
-# Get your key from: https://aistudio.google.com/app/apikey
+# Get your key from: https://aistudio.google.com/apikey
