--- a/memento/.env.example
+++ b/memento/.env.example
@@ -12,7 +12,7 @@
 # ----------------------------------------------------------------------------
 # PostgreSQL connection string - managed by Docker Compose
 # Run: docker-compose up -d
-DATABASE_URL="postgresql://memento:memento_dev@localhost:5432/memento?schema=public"
+DATABASE_URL="postgresql://memento:memento_dev@localhost:5433/memento?schema=public"
 
 # ----------------------------------------------------------------------------
 # AUTHENTICATION (Required)
@@ -36,8 +36,7 @@ AI_PROVIDER="gemini"
 ANTHROPIC_API_KEY=""
 
 # Google Gemini API Key (Required if AI_PROVIDER=gemini)
-# Sign up: https://aistudio.google.com/
-# Get API key: https://aistudio.google.com/app/apikey
+# Get API key: https://aistudio.google.com/apikey
 # Free tier: 60 requests/minute - perfect for workshop!
 GEMINI_API_KEY=""
 
