--- a/memento/package.json
+++ b/memento/package.json
@@ -24,6 +24,7 @@
     "@google/genai": "^1.37.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^2.0.0",
+    "@paralleldrive/cuid2": "^3.0.6",
     "@pinecone-database/pinecone": "^3.0.3",
     "@prisma/client": "^5.22.0",
     "@tiptap/core": "^2.8.0",
